--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\Cesar\\AppData\\Roaming\\NetBeans\\21\\build.properties
+user.properties.file=C:\\Users\\cjhua.DESKTOP-2ROLUVM\\AppData\\Roaming\\NetBeans\\21\\build.properties
